Claim ticket, Change Category, Close ticket

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 discord.guild.id=1228839244995493989
 discord.guild.channel.ticket.id=1228839245851132006
 discord.guild.category.ticket.id=1228839245851132004
+discord.guild.category.archive.id=1232395313155670066
+discord.guild.channel.mod.id=1228839245473648696
 # -- Role ID's --
 discord.role.discord-admin.id = 1228839245028921344
 discord.role.admin.id=1228839244995493998
