--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,5 +1,8 @@
 discord.guild.id=1228475643537260616
 discord.guild.channel.ticket.id=1228490839983128647
+discord.guild.category.ticket.id=1228722183963148378
+discord.guild.category.archive.id=1232396795884081333
+discord.guild.channel.mod.id=1228721729342537768
 # -- Role ID's --
 discord.role.discord-admin.id =1228476442321354792
 discord.role.admin.id=1228480660008599613
